First round of edits, clearing away a lot of the defaults.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,20 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
-
+  <header>
+    <h2>{{ page.title }}</h2>
+    <time datetime="{{ page.date | date: " %F " }}">{{ page.date | date: "%e %B %Y" }}</time>
+    &mdash;
+    <span class="category">{{ page.category }}</span>
+    {% if page.treeid %}
+    <a href="https://github.com/drovani/Vigil/tree/{{ page.treeid }}" title="View this tree on Github">
+      <i class="fa fa-github" aria-hidden="true"></i>
+    </a>
+    {% endif %}
+  </header>
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    <div style="clear: both"></div>
   </div>
 
   {% include disqus.html %}
