Fixed a syntax typo

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
     <time datetime="{{ page.date | date: " %F " }}">{{ page.date | date: "%e %B %Y" }}</time>
     &mdash;
     <span class="category">{{ page.category }}</span>
-    {% if page.subtitle }}
+    {% if page.subtitle %}
     <p class="subtitle">{{ page.subtitle }}</p>
     {% endif %}
   </header>
