--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,12 @@ layout: default
 <article class="post">
   <header>
     <h1 class="title">{{ page.title }}</h1>
+    {% if page.subtitle %}
+    <blockquote class="subtitle">{{ page.subtitle }}</blockquote>
+    {% endif %}
     <time datetime="{{ page.date | date: " %F " }}">{{ page.date | date: "%e %B %Y" }}</time>
     &mdash;
     <span class="category">{{ page.category }}</span>
-    {% if page.subtitle %}
-    <p class="subtitle">{{ page.subtitle }}</p>
-    {% endif %}
   </header>
   <div class="entry">
     {{ content }}
