Split the initial post into a 3 post series. Completed (mostly) first and second posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,9 @@ layout: default
     &mdash;
     <span class="category">{{ page.category }}</span>
   </header>
+  {% if page.series %}
+    {% include series.html %}
+  {% endif %}
   <div class="entry">
     {{ content }}
     <div style="clear: both"></div>
