Finished the 3rd part of the post series.

--- a/style.scss
+++ b/style.scss
@@ -303,6 +303,9 @@ dl.list {
     border: 1px solid grey;
     border-radius: .25em;
     padding: .25em;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
 
   dt {
