--- a/style.scss
+++ b/style.scss
@@ -25,7 +25,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 740px;
+  max-width: 900px;
   padding: 0 10px;
   width: 100%;
 }
@@ -76,9 +76,11 @@ p {
 a {
   color: $blue;
   text-decoration: none;
+  border-bottom: 1px dotted $blue;
 	cursor: pointer;
   &:hover, &:active {
     color: $blue;
+    border-bottom-style: solid;
   }
 }
 
@@ -155,89 +157,57 @@ img {
 // .masthead
 //
 
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-
 .masthead {
   padding: 20px 0;
   border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
-.site-name {
-  margin: 0;
-  color: $darkGray;
-  cursor: pointer;
-  font-family: $helveticaNeue;
-  font-weight: 300;
-  font-size: 28px;
-  letter-spacing: 1px;
-}
-
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
-
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
-nav {
-  float: right;
-  margin-top: 23px; // @TODO: Vertically middle align
-  font-family: $helveticaNeue;
-  font-size: 18px;
-
-  @include mobile {
-    float: none;
-    margin-top: 9px;
-    display: block;
-    font-size: 16px;
-  }
+  display: flex;
 
   a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
+    text-decoration: none;
+    border: none;
+  }
+  
+  .site-avatar {
+    display: block;
+    flex-grow: 1;
+    
+    img {
+      width: 70px;
+      height: 70px;
+      border-radius: 5px;
+    }
+  }
 
-    @include mobile {
-      margin: 0 10px;
-      color: $blue;
+  .site-info {
+    flex-grow: 5;
+    
+    .site-name {
+      margin: 0;
+      color: $darkGray;
+      cursor: pointer;
+      font-family: $helveticaNeue;
+      font-weight: 300;
+      font-size: 28px;
+      letter-spacing: 1px;
+    }
+    
+    .site-description {
+      color: $gray;
+      font-size: 16px;
+    }
+  }
+
+  nav {
+    font-family: $helveticaNeue;
+    font-size: 18px;
+    flex-grow: 5;
+    display: flex;
+    
+    a {
+      flex-basis: 1em;      
+      color: $darkGray;
+      font-weight: 300;
+      letter-spacing: 1px;
     }
   }
 }
@@ -245,6 +215,20 @@ nav {
 //
 // .main
 //
+
+.pagination {
+  border: 1px solid black;
+  background-color: $light-background;
+  border-radius: .25em;
+  padding: 1em;
+  text-align: center;
+  display: flex;
+  
+  span{
+    flex-direction: column;
+    flex-grow: 1;
+  }
+}
 
 .posts > .post {
   padding-bottom: 2em;
